@startuml
!include Ventoriq_00_Style.puml

title Ventoriq - Frontend: Dokumente und Export

left to right direction

skinparam nodesep 120
skinparam ranksep 120
skinparam linetype polyline

package "Frontend Controller" as FRONTEND {
  class DocScreen <<Controller>> {
    Dokumente UI
  }

  class ExportScreenController <<Controller>> {
    PDF Export UI
  }
}

package "Backend Services" as SERVICES {
  class TextDocumentService <<Service>>
  class TextDocumentParser <<Parser>>
  class PDFStorage <<Service>>
  class PDFManager <<Service>>
}

package "Datenzugriff" as ACCESS {
  class UserDatabaseAccess <<Helper>>
  class DataBase <<SQLite-Fassade>>
}

DocScreen --> UserDatabaseAccess : aktive DB
ExportScreenController --> UserDatabaseAccess : aktive DB

UserDatabaseAccess --> DataBase : liefert Nutzer-DB

DocScreen --> TextDocumentService : Dokument CRUD
DocScreen --> TextDocumentParser : Dokument lesen

ExportScreenController --> PDFStorage : PDF verwalten
ExportScreenController --> PDFManager : PDF-Dateien

TextDocumentService ..> DataBase : speichert Metadaten
PDFStorage ..> DataBase : speichert Metadaten

note bottom
Dieses Diagramm zeigt nur Dokumente und PDF-Export aus Frontend-Sicht.
Dadurch bleiben die Pfeile kurz und die Verantwortlichkeiten klar.
end note

@enduml